--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -6,60 +6,73 @@ body {
 }
 
 .nav {
+        &__menu {
+            position: sticky;
+            z-index: 1;
+            height: 80px;
+            ul {
+                list-style-type: none;
+                display: flex;
+                align-items: center;
+            }
+            li {
+                display: block;
+                padding-right: 10px
+            }
+            a {
+                padding: 10px 20px;
+                text-decoration: none;
+                color: #2e2b36;
+            }
+            a:hover {
+                text-decoration: none;
+                color: white;
+                background-color: #2e2b36;
+            }
+        }
+
+        &__logo {
+            padding: 0 20px 0 0;
+        }
+        &__dropdown {
+            &:hover {
+                ul {
+                    display: block;
+                }
+            } 
+            li  {
+                padding: 10px 100px 10px 0px;
+                background-color: #2e2b36;
+                a  {
+                    color: white;
+                    font-size: 15px;
+                    }
+                a:hover{
+                        color: #979fa3;
+                    }
+            }   
+        }
+}
+
+ul.nav{
+    &__dropdown {
+        &__content {
+            display: none;
+            position: absolute;
+            padding: 0;
+            margin-top: 10px;
+        }
+    }
+}
+
+.head {
+    width: 100%;
+    height: 100%;
     position: fixed;
-    height: 80px;
-}
-.nav__menu ul {
-    list-style-type: none;
-    display: flex;
-    align-items: center;
-}
+    top: 0;
+    background-image: url('../images/art-home-yora.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-.nav__menu li {
-    display: block;
-    padding-right: 10px
 }
-
-.nav__menu a {
-    padding: 10px 20px;
-    text-decoration: none;
-    color: #2e2b36  ;
-}
-
-.nav__menu a:hover {
-    text-decoration: none;
-    color: white;
-    background-color: #2e2b36;
-}
-
-.nav__logo {
-    padding: 0 20px 0 0;
-}
-
-ul.nav__dropdown__content {
-    display: none;
-    position: absolute;
-    padding: 0;
-    margin-top: 10px;
-}
-
-.nav__dropdown:hover ul 
-{
-    display: block;
-}
-
-.nav__dropdown li{
-    padding: 10px 100px 10px 0px;
-    background-color: #2e2b36;
-}
-
-.nav__dropdown li a{
-    color: white;
-    font-size: 15px;
-}
-
-.nav__dropdown li a:hover{
-    color: #979fa3;
-}
-
-
