--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -46,11 +46,31 @@ ul.nav__dropdown__content {
 
 .head {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: fixed;
   top: 0;
-  background-image: url(assets/images/art-home-yora.jpg);
+  display: flex;
+  justify-content: flex-end;
+  background-image: url(./images/art-home-yora.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  background-attachment: fixed; }
+  .head__greeting {
+    width: 200px;
+    height: 200px;
+    padding: 200px 80px 80px 80px;
+    background-color: yellow;
+    display: flex; }
+    .head__greeting h1 {
+      color: yellow; }
+
+.welcome {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  padding-top: 70px;
+  padding-bottom: 50px;
+  margin-top: 100vh;
+  background-color: white; }
 
