--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -67,12 +67,37 @@ ul.nav{
 
 .head {
     width: 100%;
-    height: 100%;
+    height: 100vh   ;
     position: fixed;
-    top: 0;
-    background-image: url('../images/art-home-yora.jpg');
+    top:0;
+    display: flex;
+    justify-content: flex-end;
+    background-image: url('../images/art-home-yora.jpg')    ;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 
+        &__greeting {
+            width: 200px;
+            height: 200px;
+            padding: 200px 80px 80px 80px;
+            background-color: yellow;
+            display: flex;
+            
+                h1 {
+                    color: yellow   ;
+                }
+
+        }
+}
+
+.welcome {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    padding-top: 70px;
+    padding-bottom: 50px;
+    margin-top: 100vh;
+    background-color: white;
 }
