--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -1,9 +1,7 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat&display=swap);
-body {
-  margin: 0;
-  font-family: 'Montserrat', sans-serif; }
-
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Lato&display=swap);
 .nav__menu {
+  font-family: 'Montserrat', sans-serif;
   position: sticky;
   z-index: 1;
   height: 80px; }
@@ -22,6 +20,11 @@ body {
     text-decoration: none;
     color: white;
     background-color: #2e2b36; }
+
+.nav__active {
+  text-decoration: none;
+  color: white !important;
+  background-color: #2e2b36; }
 
 .nav__logo {
   padding: 0 20px 0 0; }
@@ -44,6 +47,34 @@ ul.nav__dropdown__content {
   padding: 0;
   margin-top: 10px; }
 
+body {
+  margin: 0; }
+
+h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 44px;
+  font-weight: 400;
+  color: #2e2b36;
+  margin: 0; }
+
+h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 34px;
+  font-weight: 400;
+  color: #2e2b36;
+  margin: 0; }
+
+h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  margin: 0; }
+
+span {
+  font-family: 'Lato', sans-serif;
+  font-size: 17px;
+  line-height: 30px; }
+
 .head {
   width: 100%;
   height: 100vh;
@@ -56,21 +87,118 @@ ul.nav__dropdown__content {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed; }
+  .head__overlay {
+    width: 95%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end; }
   .head__greeting {
-    width: 200px;
-    height: 200px;
-    padding: 200px 80px 80px 80px;
-    background-color: yellow;
-    display: flex; }
-    .head__greeting h1 {
-      color: yellow; }
+    width: 410px;
+    height: 100%;
+    padding: 200px 25px 25px 80px;
+    display: flex;
+    flex-direction: column;
+    position: absolute; }
+    .head__greeting span {
+      font-size: 20px;
+      font-weight: 400;
+      color: #2e2b36;
+      margin: 20px 0; }
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  color: #2e2b36;
+  border: 1.5px solid #2e2b36; }
+  .button a {
+    font-size: 16px;
+    color: #2e2b36;
+    text-decoration: none;
+    padding: 15px; }
+  .button:hover {
+    background-color: #2e2b36; }
+    .button:hover a {
+      color: white; }
 
 .welcome {
   position: relative;
   width: 100%;
   height: 300px;
-  padding-top: 70px;
-  padding-bottom: 50px;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  padding: 50px 0 30px 0;
   margin-top: 100vh;
   background-color: white; }
+  .welcome__left {
+    width: 27%;
+    padding: 15px; }
+  .welcome__right {
+    width: 67%;
+    padding: 15px;
+    font-family: 'Lato', sans-serif;
+    font-size: 17px;
+    line-height: 30px;
+    font-weight: 400;
+    color: #5e5e5e; }
+
+.classes {
+  position: relative;
+  padding-top: 50px;
+  background-color: #ececec;
+  width: 100%;
+  display: flex;
+  flex-direction: column; }
+  .classes__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px; }
+    .classes__header h2 {
+      margin-bottom: 20px; }
+    .classes__header span {
+      font-size: 17px;
+      line-height: 30px;
+      font-weight: 400;
+      margin-bottom: 30px; }
+  .classes__content {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%; }
+    .classes__content__image {
+      width: 25%;
+      height: 350px;
+      background-position-x: 50%;
+      background-position-y: 50%;
+      background-size: cover; }
+      .classes__content__image__1 {
+        background-image: url(./images/y086.jpg); }
+      .classes__content__image__2 {
+        background-image: url(./images/y080.jpg); }
+      .classes__content__image__3 {
+        background-image: url(./images/y006.jpg); }
+      .classes__content__image__4 {
+        background-image: url(./images/y093.jpg); }
+    .classes__content__text {
+      width: 25%;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background-color: #2e2b36;
+      color: white; }
+      .classes__content__text h3 {
+        width: 80%;
+        align: left;
+        margin-bottom: 15px;
+        line-height: 34px; }
+      .classes__content__text span {
+        width: 80%;
+        color: white;
+        align: left; }
+    .classes__content__images {
+      width: 25%; }
 
