--- a/src/index.hbs
+++ b/src/index.hbs
@@ -4,45 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Yoga </title>
+    <title>{{htmlWebpackPlugin.options.title}} </title>
     <link rel="stylesheet" href="./assets/app.css">
-<link href="assets/app.css" rel="stylesheet"></head>
+</head>
 <body>
-    <nav>
-        <div class="nav__menu">
-            <ul>
-                <li><img src="./assets/images/logo-main-small.webp" class="nav__logo" alt=""></li>
-                <li>
-                    <a class="nav__active" href="#">Home</a>
-                </li>
-                <li class="nav__dropdown">
-                    <a href="#">Our studio</a>
-                    <ul class="nav__dropdown__content">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Teachers</a></li>
-                        <li><a href="#">Testimonialas</a></li>
-                        <li><a href="#">Gallery</a></li>
-                        <li><a href="#">Our partners</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">Yoga Classes</a>
-                </li>
-                <li>
-                    <a href="#">Schedule</a>
-                </li>
-                <li>
-                    <a href="#">Prices</a>
-                </li>
-                <li>
-                    <a href="#">Blog</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    {{> partials/topnav }}
+
     <div class="head">        
     </div>
     <div class="head__overlay">
@@ -93,5 +60,5 @@
         </div>
         <div class="classes__footer"></div>
     </div>
-    <script type="text/javascript" src="main.js"></script></body>
+    </body>
 </html>
