--- a/src/index.hbs
+++ b/src/index.hbs
@@ -140,7 +140,31 @@
 
 
                 </div>
-                <div class="calendar__events"></div>
+                <div class="calendar__events">
+                    <h6>EVENTS FOR JANUARY</h6>
+                    <h3>27th</h3>
+                    <div class="calendar__events__event">
+                        <img src="./assets/images/y086.jpg" alt="Ashtanga Yoga">
+                        <div class="calendar__events__event__info">
+                            <span>6:00 pm - 7:30 pm</span>
+                            <a href="#">ASHTANGA YOGA</a>
+                        </div>
+                    </div>
+                    <div class="calendar__events__event">
+                        <img src="./assets/images/y016-300X300.jpg" alt="Ashtanga Yoga">
+                        <div class="calendar__events__event__info">
+                            <span>7:00 pm - 8:00 pm</span>
+                            <a href="#">STRETCH YOGA</a>
+                        </div>
+                    </div>
+                    <div class="calendar__events__event">
+                        <img src="./assets/images/y052-900X900.jpg" alt="Ashtanga Yoga">
+                        <div class="calendar__events__event__info">
+                            <span>8:00 pm - 9:20 pm</span>
+                            <a href="#">HOT PILATES</a>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
