--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -270,8 +270,6 @@ span {
             padding: 20px 0 0 0;
         }
         &__table {
-
-
             &__head {
                 display: flex;
             }
@@ -320,9 +318,72 @@ span {
         }
         &__events {
             width: 40%;
+            padding: 40px;
             border-left-color:rgb(232, 232, 232);
             border-left-style:solid;
             border-left-width:1px; 
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            color: #171c24;
+                h6 {
+                    font-family: 'Montserrat', sans-serif;
+                    font-size: 11px;
+                    font-weight: 300;
+                    letter-spacing: 3px;
+                    margin: 0 0 14px 0;
+                }
+                h3 {
+                    margin: 0 auto 20px;
+                    font-family: 'Montserrat', sans-serif;
+                    font-size: 11px;
+                    font-weight: 300;
+                    letter-spacing: 3px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 46px;
+                    height: 46px;
+                    color: #979fa3;
+                    border: 1px solid;
+                    border-radius: 50px;
+                    border-color: #979fa3;
+                }
+                &__event {
+                    width: 100%;
+                    display: flex;
+                    padding: 25px 0 5px 0;
+                    border-top-color:rgb(239, 239, 239);
+                    border-top-style:solid;
+                    border-top-width:1px;
+                        &:hover {
+                            background-color: #eeeeee;
+                        }
+                        img {
+                            padding-right: 10px;
+                            width: 65px;
+                            height: 65px;
+                        }
+                        &__info {
+                            display: flex;
+                            flex-direction: column;
+                            span {
+                                margin: 0;
+                                color: $grey_3;
+                                font-family: 'Lato', sans-serif;
+                                font-size: 12px;
+                                line-height: 12px;
+                            }
+                            a {
+                                text-decoration: none;
+                                color: #494949;
+                                font-family: 'Montserrat', sans-serif;
+                                font-size: 13px;
+                                font-weight: 700;
+                            }
+                        }
+
+                }
         }
     }
 }
