--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,5 +1,3 @@
-// Reikia padaryt, kad nav bare pasikeistu ir išliktų spalva uzejus su pele
-
 <!DOCTYPE html>
 <html>
 <head> 
@@ -173,6 +171,8 @@
         </div>
 
     </div>
-
+    <div class="studio">
+        
+    </div>
     </body>
 </html>
