--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -2,16 +2,23 @@
 @import url(https://fonts.googleapis.com/css?family=Lato&display=swap);
 .nav__menu {
   font-family: 'Montserrat', sans-serif;
-  position: sticky;
-  z-index: 1;
-  height: 80px; }
+  position: fixed;
+  top: 0;
+  transition: 0.8s;
+  background-color: rgba(255, 255, 255, 0.35);
+  z-index: 2;
+  height: 100px;
+  width: 100%; }
   .nav__menu ul {
     list-style-type: none;
     display: flex;
-    align-items: center; }
+    align-items: center;
+    margin: 0; }
   .nav__menu li {
     display: block;
     padding-right: 10px; }
+    .nav__menu li img {
+      padding-top: 15px; }
   .nav__menu a {
     padding: 10px 20px;
     text-decoration: none;
@@ -77,7 +84,7 @@ span {
 
 .head {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   top: 0;
   display: flex;
@@ -126,7 +133,7 @@ span {
   position: relative;
   display: flex;
   justify-content: center;
-  z-index: 1000;
+  z-index: 1;
   padding: 50px 0 30px 0;
   margin-top: 100vh;
   background-color: white; }
@@ -404,4 +411,15 @@ span {
             font-family: 'Montserrat', sans-serif;
             font-size: 13px;
             font-weight: 700; }
+
+.studio {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image: url(./images/y048.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  z-index: 100; }
 
