--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -37,7 +37,7 @@ span {
 
 .head {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: fixed;
     top:0;
     display: flex;
@@ -96,7 +96,7 @@ span {
     position: relative;
     display: flex;
     justify-content: center;
-    z-index: 1000;
+    z-index: 1;
     padding: 50px 0 30px 0;
     margin-top: 100vh;
     background-color: white;
@@ -386,4 +386,17 @@ span {
                 }
         }
     }
+}
+
+.studio {
+    position: relative;
+    width: 100%;
+    height: 400px;
+    background-image: url('../images/y048.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    z-index: 100;
+
 }
