--- a/src/assets/styles/nav.scss
+++ b/src/assets/styles/nav.scss
@@ -1,17 +1,26 @@
 .nav {
     &__menu {
         font-family: 'Montserrat', sans-serif;
-        position: sticky;
-        z-index: 1;
-        height: 80px;
+        position: fixed;
+        top: 0;
+        transition: 0.8s;
+        background-color: rgba(255, 255, 255, 0.35);
+        z-index: 2;
+        height: 100px;
+        width: 100%;
         ul {
             list-style-type: none;
             display: flex;
             align-items: center;
+            margin: 0;
+
         }
         li {
             display: block;
-            padding-right: 10px
+            padding-right: 10px;
+                img {
+                    padding-top: 15px;
+                }
         }
         a {
             padding: 10px 20px;
